--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>658</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -45,7 +45,7 @@
      <string>class</string>
     </property>
     <addaction name="actionCCNode"/>
-    <addaction name="actionCCLayer"/>
+    <addaction name="actionCCLayerColor"/>
     <addaction name="actionCCSprite"/>
     <addaction name="actionCCLabelTTF"/>
     <addaction name="actionCCMenu"/>
@@ -111,9 +111,9 @@
     <string>CCNode</string>
    </property>
   </action>
-  <action name="actionCCLayer">
+  <action name="actionCCLayerColor">
    <property name="text">
-    <string>CCLayer</string>
+    <string>CCLayerColor</string>
    </property>
   </action>
   <action name="actionCCSprite">
