--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,7 @@
      <x>0</x>
      <y>0</y>
      <width>658</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -39,6 +39,7 @@
     <addaction name="actionCut"/>
     <addaction name="actionCopy"/>
     <addaction name="actionParse"/>
+    <addaction name="actionDel"/>
    </widget>
    <widget class="QMenu" name="menuCCNode">
     <property name="title">
@@ -139,6 +140,11 @@
   <action name="actionSave_path">
    <property name="text">
     <string>Save path...</string>
+   </property>
+  </action>
+  <action name="actionDel">
+   <property name="text">
+    <string>del</string>
    </property>
   </action>
  </widget>
