CCScale9Sprite bug fix. record the pic path witch last browsed.

--- a/qselectsizedialog.ui
+++ b/qselectsizedialog.ui
@@ -92,7 +92,7 @@
          </item>
          <item>
           <property name="text">
-           <string>QCCScale9Sprite</string>
+           <string>CCScale9Sprite</string>
           </property>
          </item>
         </widget>
